minor style fix: make H1 on "uphappy page" visible

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -675,7 +675,6 @@ width:24em;
 div.controller_help dt a,div.controller_help h1 a,div#help_unhappy h1 a.hover_a {
 text-decoration:none;
 font-size:0.8em;
-color:#fff;
 background-color:#fff;
 }
 
